--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,12 @@ code {
 img{
   max-width: 100%;
 }
-count{
+.count{
   color: red;
 }
 checkout{
   margin-left:30%
+}
+.nameProduct{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
