--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,6 @@ checkout{
 .nameProduct{
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.CartSize{
+  width: 200px;
+}
